Added Source Link

--- a/examples/svg_maps/index.html
+++ b/examples/svg_maps/index.html
@@ -41,6 +41,7 @@
         </div>
     </div>
     <p>
+        Source: <a href="https://github.com/TweededBadger/tweededbadger.github.io/tree/master/examples/svg_maps" target="_blank">https://github.com/TweededBadger/tweededbadger.github.io/tree/master/examples/svg_maps</a><br/>
         Map Source: <a href="http://commons.wikimedia.org/wiki/File:Blank_US_Map.svg" target="_blank">http://commons.wikimedia.org/wiki/File:Blank_US_Map.svg</a>
     </p>
     <a class="logo" href="http://www.tweededbadger.com" target="_blank"><img src="img/badger_full.svg" alt=""/></a>
