--- a/examples/svg_maps/index_tut.html
+++ b/examples/svg_maps/index_tut.html
@@ -4,13 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Data Responsive SVG Map Example</title>
+    <title>Data Responsive SVG Map</title>
     <link rel="stylesheet" href="css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/main_tut.css"/>
 </head>
 <body ng-app="SvgMapApp" ng-controller="MainCtrl">
 <div class="container">
-    <h2>Data Responsive SVG Map Example</h2>
     <div class="row">
         <div class="col-md-6">
             <div class="panel panel-default">
@@ -42,26 +41,10 @@
             </div>
         </div>
     </div>
-    <p>
-        Source: <a href="https://github.com/TweededBadger/tweededbadger.github.io/tree/master/examples/svg_maps" target="_blank">https://github.com/TweededBadger/tweededbadger.github.io/tree/master/examples/svg_maps</a><br/>
-        Map Source: <a href="http://commons.wikimedia.org/wiki/File:Blank_US_Map.svg" target="_blank">http://commons.wikimedia.org/wiki/File:Blank_US_Map.svg</a>
-    </p>
-    <a class="logo" href="http://www.tweededbadger.com" target="_blank"><img src="img/badger_full.svg" alt=""/></a>
 </div>
-<script src="js/angular.js"></script>
-<script src="js/controllers.js"></script>
-<script src="js/directives.js"></script>
-<script src="js/filters.js"></script>
-
-<script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-    ga('create', 'UA-51862016-2', 'auto');
-    ga('send', 'pageview');
-
-</script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.0/angular.min.js"></script>
+<script src="js/controllers_tut.js"></script>
+<script src="js/directives_tut.js"></script>
+<script src="js/filters_tut.js"></script>
 </body>
 </html>
