Matching up tutorial

--- a/examples/svg_maps/index.html
+++ b/examples/svg_maps/index.html
@@ -10,7 +10,7 @@
 </head>
 <body ng-app="SvgMapApp" ng-controller="MainCtrl">
 <div class="container">
-    <h2>Data Responsive SVG Map Example</h2>
+    <h2>Angular JS Data Responsive SVG Map</h2>
     <div class="row">
         <div class="col-md-6">
             <div class="panel panel-default">
