--- a/examples/svg_maps/index.html
+++ b/examples/svg_maps/index.html
@@ -11,6 +11,7 @@
 <body ng-app="SvgMapApp" ng-controller="MainCtrl">
 <div class="container">
     <h2>Angular JS Data Responsive SVG Map</h2>
+    <h4>The tutorial for this example can be found <a href="https://medium.com/@tweededbadger/tutorial-dynamic-data-driven-svg-map-with-angularjs-b112fdec421d">here</a></h4>
     <div class="row">
         <div class="col-md-6">
             <div class="panel panel-default">
@@ -43,8 +44,8 @@
         </div>
     </div>
     <p>
-        Source: <a href="https://github.com/TweededBadger/tweededbadger.github.io/tree/master/examples/svg_maps" target="_blank">https://github.com/TweededBadger/tweededbadger.github.io/tree/master/examples/svg_maps</a><br/>
-        Map Source: <a href="http://commons.wikimedia.org/wiki/File:Blank_US_Map.svg" target="_blank">http://commons.wikimedia.org/wiki/File:Blank_US_Map.svg</a>
+        <i><a href="https://github.com/TweededBadger/AngularJS-data-driven-SVG-map-example" target="_blank">Source code</a><br/>
+        <a href="http://commons.wikimedia.org/wiki/File:Blank_US_Map.svg" target="_blank">Map Source</a></i>
     </p>
     <a class="logo" href="http://www.tweededbadger.com" target="_blank"><img src="img/badger_full.svg" alt=""/></a>
 </div>
